src/objects/Accreditation__c.object
<CustomObject>
    <description>To be able to maintain Partner&apos;s Accreditation Information</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Partner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Date__c</fullName>
        <description>Test_To be able to maintain Partners Accreditation Date in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accreditation_Grade__c</fullName>
        <description>To be able to maintain Partners Accreditation Grade in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Define the vendor portfolios that complement the Nokia portfolio</inlineHelpText>
        <label>Accreditation Grade</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Level__c</fullName>
        <description>To be able to maintain Partners Accreditation Level in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.</description>
        <label>Accreditation Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accreditation_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized - Accreditation In Progress</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base - Certification In Progress</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                    <isActive>false</isActive>
                    <label>L2</label>
                </value>
                <value>
                    <fullName>L3</fullName>
                    <isActive>false</isActive>
                    <label>L3</label>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>NBOS</fullName>
                    <isActive>false</isActive>
                    <label>NBOS</label>
                </value>
                <value>
                    <fullName>No Accreditation</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Partner Branded</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Super Advanced</fullName>
                    <isActive>false</isActive>
                    <label>Super Advanced</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accreditation_Type__c</fullName>
        <description>To be able to maintain Partner&apos;s accreditation information in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.</description>
        <label>Accreditation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                    <isActive>false</isActive>
                    <label>B</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <isActive>false</isActive>
                    <label>C</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Contract_Types__c</fullName>
        <label>Active Contract Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NIRA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PPA-DIS</fullName>
                </value>
                <value>
                    <fullName>PPA-RES</fullName>
                </value>
                <value>
                    <fullName>Federal Government Agreement</fullName>
                </value>
                <value>
                    <fullName>Services Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FALU)</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FNOK)</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS (Non-PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>US Distributor - Legacy</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded (non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS (Non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>Letter of Resale Authorization</fullName>
                </value>
                <value>
                    <fullName>Managed Services Amendment to SSA/MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded (Non PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>CPA-RES</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-DIS family</label>
                </value>
                <value>
                    <fullName>CPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-RES family</label>
                </value>
                <value>
                    <fullName>PPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-DIS family</label>
                </value>
                <value>
                    <fullName>PPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-RES family</label>
                </value>
                <value>
                    <fullName>Reseller Agreements</fullName>
                    <isActive>false</isActive>
                    <label>Reseller Agreements</label>
                </value>
                <value>
                    <fullName>SPaaP- Managed Services</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP- Managed Services</label>
                </value>
                <value>
                    <fullName>SPaaP-Hybrid</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP-Hybrid</label>
                </value>
                <value>
                    <fullName>SPaaP-Reseller</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP-Reseller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_pricing_level__c</fullName>
        <defaultValue>$RecordType.Id</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>1</inlineHelpText>
        <label>Actual pricing level</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Software_Only__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Administration Software Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <description>This field will always be hidden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenated_Text_field__c</fullName>
        <formula>Text(Pricing_Cluster__c) &amp; &quot; &quot; &amp; Text(Portfolio__c) &amp; &quot; &quot; &amp; Partner_Program__c &amp; &quot; PPA-&quot; &amp; Partner_Type__c &amp; &quot; &quot; &amp; Pricing_Accreditation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEP File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>$User.FirstName &amp;&quot; &quot;&amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downgrade_Grace_Period_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Downgrade Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluated_Accreditation_Level__c</fullName>
        <label>Evaluated Accreditation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized - Accreditation In Progress</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base - Certification In Progress</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>No Accreditation</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Partner Branded</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluated_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Q2C_Import_File__c</fullName>
        <formula>IF(TEXT(Pricing_Cluster__c)&lt;&gt; null,
IF(

OR(
ISPICKVAL(Accreditation_Type__c,&quot;Maintenance&quot;),
ISPICKVAL(Portfolio__c,&quot;Airscale Wifi&quot;)
),

&quot; &quot;,

IF(
Nokia_CPQ_Env_Type__c=&apos;sCRM&apos;,
HYPERLINK(&apos;/apex/XauthorIntermediatePage?selectedRecordId=&apos;+Id+&apos;&amp;appName=Order Generation&amp;mode=touchless&amp;outputType=EXCEL&apos;,&apos;Export&apos;),
HYPERLINK( Nokia_Env_URL__c &amp; &apos;/apex/XauthorIntermediatePage?selectedRecordId=&apos;+Id+&apos;&amp;appName=Order Generation&amp;mode=touchless&amp;outputType=EXCEL&apos;,&apos;Export&apos;)
)


),&quot;Pricing Cluster Required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Partner Price Catalogue for loading into OEPs.
Exports are available in Notes &amp; Attachments section of the Accreditation record.</inlineHelpText>
        <label>OEP Import File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Technician__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field Technician</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLevelID__c</fullName>
        <formula>Partner__r.GEOLevel1ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoLevelID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Level_1_Name__c</fullName>
        <formula>Partner__r.GEOLevel1Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo Level 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <formula>Text( Partner__r.Incoterms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Accreditation_Evaluation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Accreditation Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Accreditation_Level_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Accreditation Level Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Partner__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_Lab_Equipment_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meets Lab Equipment Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Integration_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Network Integration Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Planning_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Network Planning Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Certification_Optional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Certification (Optional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQContract_Product_Price_Catalogue__c</fullName>
        <formula>IF(LEN(NokiaCPQ_Contract_Price_List__c )&gt;0,IF(Nokia_CPQ_Env_Type__c=&apos;sCRM&apos;,
HYPERLINK(&apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=ContractPriceCatalogueExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Contract Price Export&apos;),
HYPERLINK( Nokia_Env_URL__c &amp; &apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=ContractPriceCatalogueExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Contract Price Export&apos;)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Product Price Catalogue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Account_Address__c</fullName>
        <description>1</description>
        <formula>Partner__r.BillingState +&quot; &quot;+ Partner__r.BillingCity +&quot; &quot;+ NokiaCPQ_Account_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Account_Country__c</fullName>
        <formula>TEXT(Partner__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Account_Currency__c</fullName>
        <formula>TEXT(Partner__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Contract_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Price List</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No Contract PriceList Exists for this Account</errorMessage>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.PriceList_Type__c</field>
                <operation>equals</operation>
                <value>Indirect Partner</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.CurrencyIsoCode</field>
                <operation>equals</operation>
                <valueField>$Source.CurrencyIsoCode</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Accreditation_Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Incoterm_Per__c</fullName>
        <formula>Partner__r.NokiaCPQ_Incoterm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterm %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Incoterm_Percentage__c</fullName>
        <description>To capture incoterm percentage.</description>
        <label>Incoterm %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Incoterm__c</fullName>
        <label>Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXW Ex Works</fullName>
                </value>
                <value>
                    <fullName>FCA Free Carrier</fullName>
                </value>
                <value>
                    <fullName>CPT Carriage Paid To</fullName>
                </value>
                <value>
                    <fullName>CIP Carriage And Insurance Paid To</fullName>
                </value>
                <value>
                    <fullName>DAT Delivered At Terminal</fullName>
                </value>
                <value>
                    <fullName>DAP Delivered At Place</fullName>
                </value>
                <value>
                    <fullName>DDP Delivered Duty Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nokia_CPQ_Env_Type__c</fullName>
        <formula>IF(CONTAINS( Nokia_Env_URL__c,$Label.NokiaCPQ_Partner_Community_Name),&apos;PRM&apos;,&apos;sCRM&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nokia CPQ Env Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Env_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_400,FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_400)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nokia Env URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Plan_Status__c</fullName>
        <label>Partner Business Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Manager__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Marketing Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Price_Catalog__c</fullName>
        <formula>IF(TEXT(Pricing_Cluster__c)&lt;&gt; null,

IF(

TEXT(Accreditation_Type__c) &lt;&gt; &apos;Maintenance&apos;,

IF(Nokia_CPQ_Env_Type__c=&apos;sCRM&apos;,HYPERLINK(&apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=PriceCatalogExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Export&apos;),HYPERLINK( Nokia_Env_URL__c &amp; &apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=PriceCatalogExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Export&apos;)),

IF(Nokia_CPQ_Env_Type__c=&apos;sCRM&apos;,HYPERLINK(&apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=PriceCatalogMaintenanceExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Export&apos;),HYPERLINK( Nokia_Env_URL__c &amp; &apos;/apex/Apttus_XApps__EditInExcelLaunch?selectedRecordId=&apos;+Id+&apos;&amp;appName=PriceCatalogMaintenanceExport&amp;mode=touchless&amp;outputType=None&apos;,&apos;Export&apos;))

),&quot;Pricing Cluster Required&quot;)</formula>
        <inlineHelpText>Exports are available in Notes &amp; Attachments section of the Accreditation record</inlineHelpText>
        <label>Partner Price Catalog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <formula>TEXT( Partner__r.Partner_Program__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Relationship_Manager__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Relationship Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT( Partner__r.Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditation and Pricing</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>To be able to maintain Partner&apos;s accreditation information in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.</description>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Accreditation__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Pricing_Level_Override__c, &apos;No Accreditation&apos;)),
Pricing_Override_Expiration__c &gt;= today()),Text(Pricing_Level_Override__c), text(Accreditation_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Pricing Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Cluster__c</fullName>
        <description>PRM R2.1 Sprint 2</description>
        <label>Pricing Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Level_Override__c</fullName>
        <description>To be able to maintain Partner&apos;s accreditation information in the portal so that the accreditation status is accurately reflected in the system and partners are able to work on completing their training program.
#field name changed in 2.1 sprint 2</description>
        <label>Pricing Level Override</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accreditation_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Pricing_Level_Override</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Override_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Override Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Level_Change__c</fullName>
        <label>Reason for Level Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Users Certification</fullName>
                </value>
                <value>
                    <fullName>Change in Partner Program</fullName>
                </value>
                <value>
                    <fullName>Automated Level Change</fullName>
                </value>
                <value>
                    <fullName>Change in Contract</fullName>
                </value>
                <value>
                    <fullName>Change in Business Plan</fullName>
                </value>
                <value>
                    <fullName>Change to Product Portfolio</fullName>
                </value>
                <value>
                    <fullName>Change to Maintenance Plan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Associate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Associate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Clerk__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Desk Clerk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Manager Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Approval__c</fullName>
        <label>Service Manager Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto-populated with the user who updates the Service Manager Approval to &apos;Yes&apos;</inlineHelpText>
        <label>Service Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shift_Model__c</fullName>
        <label>Shift Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8X5</fullName>
                </value>
                <value>
                    <fullName>16X5</fullName>
                </value>
                <value>
                    <fullName>24X7</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Support_Level_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Technical Support Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Level_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Technical Support Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Screening__c</fullName>
        <label>Third Party Screening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Conditionally Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Existing_Accreditation_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be hidden</description>
        <label>Update Existing Accreditation Records</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>